# RailwaySignalSystem

./: .gitignore  CMakeLists.txt
build_cov/: CTestTestfile.cmake  DartConfiguration.tcl  build.ninja
build_cov/src/: CTestTestfile.cmake
build_cov/tests/: CTestTestfile.cmake
src/: CMakeLists.txt
src/app/: BlockController.cpp
tests/: .approvals.json  CMakeLists.txt  safety_summary.json
tests/analysis/: .~lock.analysis.xlsx#  analysis.json  analysis.xlsx  call_depths.txt  file_summaries.txt  functions.txt  hardware_functions.txt  mcdc_gaps.json  source_fingerprints.json
tests/compilation_report/src/app/: test_BlockController_compiles_yes.txt
tests/compilation_report/src/logic/: test_ControllerHelpers_compiles_yes.txt  test_ControllerLogic_compiles_yes.txt  test_Interlocking_compiles_yes.txt
tests/review/: APPROVED.test_Interlocking.cpp.flag  review_required.md
tests/review/src/app/: test_BlockController.cpp.flag
tests/review/src/logic/: test_ControllerHelpers.cpp.flag
tests/src/app/: test_BlockController.cpp
tests/src/drivers/: test_SignalHead.cpp  test_TrackCircuitInput.cpp
tests/src/logic/: test_ControllerHelpers.cpp  test_ControllerLogic.cpp  test_Interlocking.cpp
tests/stubs/: Arduino_stubs.cpp
tests/test_reports/: ctest_report.txt  interlocking_test_report.txt  interlocking_test_report.xml  railway_tests_gtest.xml  railway_tests_report.txt
tests/test_reports/selected/src/logic/: test_ControllerHelpers__src__logic.exe_gtest.xml  test_ControllerHelpers__src__logic.exe_test_report.txt  test_ControllerLogic__src__logic.exe_gtest.xml  test_ControllerLogic__src__logic.exe_test_report.txt  test_Interlocking__src__logic.exe_gtest.xml  test_Interlocking__src__logic.exe_test_report.txt
tests/test_reports/src/drivers/test_TrackCircuitInput/: test_TrackCircuitInput_RESULTS.xlsx  test_TrackCircuitInput_SUMMARY.txt  test_TrackCircuitInput_test_report.txt
tests/test_reports/src/logic/test_Interlocking/: gtest.xml
